--- a/portfolio.html
+++ b/portfolio.html
@@ -22,14 +22,14 @@
                 <span class="first-word">Web</span> <span class="second-word">Studio</span>
             </a>
             <ul class="site-nav list">
-                <li class="item"><a class="link" href="./index.html">Студия</a></li>
-                <li class="item"><a class="link current" href="./portfolio.html">Портфолио</a></li>
+                <li class="item"><a class="link current" href="./index.html">Студия</a></li>
+                <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
                 <li class="item"><a class="link" href="#Контакты">Контакты</a></li>
             </ul>
             <ul class="site-auto list">
                 <li class="item">
                     <a class="contakt-link link" href="mailto:info@devstudio.com">
-                        <svg class="contakt-icon">
+                        <svg class="icon-envelope">
                             <use href="./images/symbol-defs 2.svg#icon-envelope"></use>
                         </svg>
                         info@devstudio.com
@@ -37,7 +37,7 @@
                 </li>
                 <li class="item">
                     <a class="contakt-link link" href="tel:+380961111111">
-                        <svg class="contakt-icon">
+                        <svg class="icon-smartphone">
                             <use href="./images/symbol-defs 2.svg#icon-smartphone"></use>
                         </svg>
                         +38 096 111 11 11
@@ -140,7 +140,7 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <section class="contacts">
+            <div class="contact-info">
                 <div class="footer-container">
                     <a class="logo-footer" href="./index.html">
                         <span class="first-word">Web</span>
@@ -153,8 +153,7 @@
                         <a class="addres-link" href="tel:+380961111111">+38 099 111 11 11</a>
                     </address>
                 </div>
-            </section>
-
+            </div>
             <section class="footer-section">
                 <div class="footer-container">
                     <h2 class="footer-title">присоединяйтесь</h2>
@@ -191,7 +190,6 @@
                 </div>
             </section>
         </div>
-
     </footer>
 
 
