--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
             <ul class="site-auto list">
                 <li class="item">
                     <a class="contakt-link link" href="mailto:info@devstudio.com">
-                        <svg class="icon-envelope">
-                            <use href="./images/symbol-defs 2.svg#icon-envelope"></use>
+                        <svg class="icon-envelope" width="16" height="12">
+                            <use href="./images/icons1.svg#icon-envelope"></use>
                         </svg>
                         info@devstudio.com
                     </a>
                 </li>
                 <li class="item">
                     <a class="contakt-link link" href="tel:+380961111111">
-                        <svg class="icon-smartphone">
-                            <use href="./images/symbol-defs 2.svg#icon-smartphone"></use>
+                        <svg class="icon-smartphone" width="10" height="16">
+                            <use href="./images/icons1.svg#icon-smartphone"></use>
                         </svg>
                         +38 096 111 11 11
                     </a>
@@ -168,7 +168,7 @@
 
                         </div>
                     </li>
-                    <li class=" item">
+                    <li class="item">
                         <img class="img" src="./images/foto2.jpg" width="270" height="260" alt="Фото Ольги Репиной">
                         <div class="team-img">
                             <h3 class="title-img">Ольга Репина</h3>
