--- a/portfolio.html
+++ b/portfolio.html
@@ -22,23 +22,23 @@
                 <span class="first-word">Web</span> <span class="second-word">Studio</span>
             </a>
             <ul class="site-nav list">
-                <li class="item"><a class="link current" href="./index.html">Студия</a></li>
-                <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
+                <li class="item"><a class="link" href="./index.html">Студия</a></li>
+                <li class="item"><a class="link current" href="./portfolio.html">Портфолио</a></li>
                 <li class="item"><a class="link" href="#Контакты">Контакты</a></li>
             </ul>
             <ul class="site-auto list">
                 <li class="item">
                     <a class="contakt-link link" href="mailto:info@devstudio.com">
-                        <svg class="icon-envelope">
-                            <use href="./images/symbol-defs 2.svg#icon-envelope"></use>
+                        <svg class="icon-envelope" width="16" height="12">
+                            <use href="./images/icons1.svg#icon-envelope"></use>
                         </svg>
                         info@devstudio.com
                     </a>
                 </li>
                 <li class="item">
                     <a class="contakt-link link" href="tel:+380961111111">
-                        <svg class="icon-smartphone">
-                            <use href="./images/symbol-defs 2.svg#icon-smartphone"></use>
+                        <svg class="icon-smartphone" width="10" height="16">
+                            <use href="./images/icons1.svg#icon-smartphone"></use>
                         </svg>
                         +38 096 111 11 11
                     </a>
